FILE(GLOB blackd_SOURCES *.cpp)
FILE(GLOB blackd_HEADERS *.h)
SET(blackd_HEADERS_QOBJECT
		blackd.h)
		
SET(blackd_FORMS blackd.ui)
SET(blackd_RESOURCES blackd.qrc)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
		
QT4_WRAP_CPP(blackd_HEADERS_MOC ${blackd_HEADERS_QOBJECT})
QT4_WRAP_UI(blackd_FORMS_HEADERS ${blackd_FORMS})
QT4_ADD_RESOURCES(blackd_RESOURCES_RCC ${blackd_RESOURCES})

SOURCE_GROUP(QtGeneratedMocSrc FILES ${blackd_HEADERS_MOC})
SOURCE_GROUP (QtResources FILES ${blackd_RESOURCES_RCC})
SOURCE_GROUP (QtForms FILES ${blackd_FORMS_HEADERS})

ADD_EXECUTABLE(blackd WIN32 MACOSX_BUNDLE ${blackd_SOURCES}
			${blackd_HEADERS_MOC}
			${blackd_FORMS_HEADERS}
			${blackd_RESOURCES_RCC})

TARGET_LINK_LIBRARIES(blackd blackmisc blackcore ${QT_LIBRARIES} ${QT_QTMAIN_LIBRARY})
SET_TARGET_PROPERTIES(blackd PROPERTIES PROJECT_LABEL "BlackBox Daemon - blackd")